--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
 <html>
    <head>
+   
+   <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8WV4D9HGE0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-8WV4D9HGE0');
+</script>
+      
    </head> 
    <body>
    <div class="header-title">
